force-app/main/default/objects/ArrMinervDatosWS__c/ArrMinervDatosWS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Datos para las llamadas a los WS de Minerva de Arriaga</description>
    <label>ArriagaMinerva_DatosLlamadas</label>
</CustomObject>