force-app/main/default/objects/ArrMinervDatosWS__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check de control que indica si la configuración puede o no usarse</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>