force-app/main/default/objects/ArrMinervDatosWS__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint para los servicios de Minerva</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>