force-app/main/default/objects/ArrMinervDatosWS__c/fields/EndpointEstados__c.field-meta.xml
<CustomField>
    <fullName>EndpointEstados__c</fullName>
    <label>EndpointEstados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>